[Contract] Messages angefangen